syntax = "proto3";

option java_package = "employee";
option java_outer_classname = "EmployeeProto";

service EmployeeService {
    rpc GetEmployeeSystem (GetEmployeeSystemRequest) returns (GetEmployeeSystemResponse) {}
}

message GetEmployeeSystemRequest {
    string eid = 1;
}

message GetEmployeeSystemResponse {
    string ename = 2;
    string email = 3;
    string ephone = 4;
}